--- a/_gdiff/GDiff/config_file.cfg
+++ b/_gdiff/GDiff/config_file.cfg
@@ -3,5 +3,5 @@
 #BUGDATA_FILE="/Users/mehreenali/Documents/workspace/CS706_GDiff/input/result.txt"
 CFLOW_VERSION1="/tmp/gdiff/runs/gdiff_cflow_v1"
 CFLOW_VERSION2="/tmp/gdiff/runs/gdiff_cflow_v2"
-BUGDATA_FILE="/tmp/gdiff/runs/result.txt"
+BUGDATA_FILE="/tmp/gdiff/runs/result_buffer.txt"
 BUG_LINK="https://bz.apache.org/bugzilla/show_bug.cgi?id="
